correcting showMobileMenu background invisible

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -55,7 +55,7 @@
     padding-top: 2.25rem;
     width: 100vw;
     height: 100vh;
-    background: var(--bg-color);
+    background: var(--backgourndColor);
   }
   
   .mobile-menu-content ul {
@@ -69,6 +69,10 @@
   
   .mobile-menu-content a {
     font-size: var(--fs-lg);
+  }
+
+  .no-scroll {
+    overflow: hidden;
   }
 
   @media (width >= 1280px) {
